turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: identifier expected but '(' found.
def test((rule:Array[Char], colors:Array[Color])
         ^LangtonsAnt:25: error: ':' expected but '}' found.
}
^