turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
}

def test((rule:Array[Char], colors:Array[Color])
{
	
}
